--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   height: 985px;
-  background-image: url("../../img/header-first_background.jpg");
+  background-image: url("./img/header-first_background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -124,7 +124,7 @@
 .search-ticket-form__icon {
   width: 24px;
   height: 24px;
-  background-image: url("../../img/icon/search-ticket-form__update.png");
+  background-image: url("./img/icon/search-ticket-form__update.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
@@ -132,17 +132,5 @@
 
 .search-ticket-form__button {
   margin-top: 92px;
-  width: 323px;
-  height: 60px;
-  background: #ffa800;
-  border-radius: 5px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #292929;
   align-self: end;
 }
