--- a/src/components/organisms/HowItWorks/style.scss
+++ b/src/components/organisms/HowItWorks/style.scss
@@ -1,6 +1,6 @@
 .howItWorks {
   height: 585px;
-  background-image: url("../../img/howItWorks/background.jpg");
+  background-image: url("./img/background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -25,24 +25,7 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-.howItWorks__button {
-  width: 325px;
-  height: 60px;
-  border: 1px solid #ffffff;
-  box-sizing: border-box;
-  border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0);
 
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
-  /* identical to box height */
-  text-align: center;
-
-  color: #ffffff;
-}
 .howItWorks__row-bottom {
   display: flex;
   justify-content: space-between;
@@ -75,13 +58,13 @@
 }
 
 .convenientOrder {
-  background-image: url("../../img/howItWorks/convenientOrder.svg");
+  background-image: url("./img/convenientOrder.svg");
 }
 
 .dontOffice {
-  background-image: url("../../img/howItWorks/dontOffice.svg");
+  background-image: url("./img/dontOffice.svg");
 }
 
 .hugeSelection {
-  background-image: url("../../img/howItWorks/hugeSelection.svg");
+  background-image: url("./img/hugeSelection.svg");
 }
