--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -17,11 +17,13 @@
   background: #ffa800;
 }
 .header__logo {
-  margin-top: 8px;
   padding-left: 28px;
   padding-right: 28px;
+  background: rgba(41, 41, 41, 0.6);
+  padding-bottom: 15px;
 }
 .logo {
+  margin-top: 8px;
   font-family: Calibri;
   font-style: normal;
   font-weight: normal;
@@ -30,7 +32,6 @@
   color: #e5e5e5;
 }
 .header-nav {
-  margin-top: 15px;
 }
 .nav {
   height: 94px;
@@ -59,78 +60,11 @@
   flex: 1 1 auto;
 }
 .header__form {
-}
-.search-ticket {
-  display: flex;
   justify-content: flex-end;
 }
-.search-ticket__title {
-  font-family: Calibri;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 72px;
-  line-height: 88px;
-  color: #ffffff;
-  width: 419px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-right: 184px;
-  margin-bottom: 110px;
-}
-.search-ticket__form {
-  width: 50%;
-}
-.search-ticket-form {
-  width: 729px;
-  height: 574px;
-  background: rgba(41, 41, 41, 0.8);
-  padding: 23px;
-  padding-top: 19px;
-  display: flex;
-  flex-direction: column;
-  .row {
-    display: flex;
-    padding-top: 20px;
-    justify-content: space-between;
-    align-items: center;
+.selectTrain {
+  &.header {
+    height: 596px;
+    background-image: url("./img/selectTrain_background.jpg");
   }
-}
-.search-ticket-form__title {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 30px;
-  line-height: 35px;
-  color: #ffffff;
-  margin-top: 56px;
-  margin-left: 4px;
-}
-
-.search-ticket-form__item {
-  width: 322px;
-  height: 60px;
-  background: #ffffff;
-  border-radius: 3px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  /* identical to box height */
-  color: #e5e5e5;
-  padding: 20px;
-}
-.search-ticket-form__icon {
-  width: 24px;
-  height: 24px;
-  background-image: url("./img/icon/search-ticket-form__update.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-}
-
-.search-ticket-form__button {
-  margin-top: 92px;
-  align-self: end;
 }
