--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -8,9 +8,7 @@
   display: flex;
   flex-direction: column;
 }
-.header::before {
-  content: "";
-  position: absolute;
+.header__line {
   width: 100%;
   height: 8px;
   bottom: 0;
