--- a/src/components/molecules/StatusSteps/style.scss
+++ b/src/components/molecules/StatusSteps/style.scss
@@ -2,6 +2,7 @@
   position: relative;
   max-width: 100%;
   height: 98px;
+  background: #3e3c41;
 }
 .status-steps__background {
   position: absolute;
@@ -19,7 +20,6 @@
 
 .status-steps__background-right {
   width: 75%;
-  background: #3e3c41;
 }
 .status-steps__row {
   position: relative;
@@ -33,29 +33,31 @@
 .status-steps__item {
   &.item {
     position: relative;
-    width: calc(25% - 37.5px);
+    width: calc(25% - 37px);
     display: flex;
     align-items: center;
     background: #3e3c41;
     z-index: 2;
     margin-right: 37.5px;
+    border-radius: 4px;
     &.active {
       background: #ffa800;
+      &.item::after {
+        display: block;
+      }
     }
     &::before {
       content: "";
       position: absolute;
       display: block;
-      width: 0;
-      height: 0;
-      right: -37.5px;
-      bottom: 1px;
-      $size: 48px;
-      border-top: $size solid transparent;
-      border-left: 37.5px solid white;
-      border-bottom: $size solid transparent;
+      width: 37px;
+      height: 97px;
+      right: -37px;
+      background-image: url("../../../img/Vector.svg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
       z-index: 3;
-      background: #3e3c41;
     }
     &::after {
       content: "";
@@ -63,14 +65,30 @@
       display: block;
       width: 0;
       height: 0;
-      right: -36.5px;
+      right: -36px;
       bottom: 2px;
       $size: 47px;
       border-top: $size solid transparent;
-      border-left: 37.5px solid #ffa800;
+      border-left: 36.5px solid #ffa800;
       border-bottom: $size solid transparent;
       z-index: 4;
+      display: none;
     }
+    // &::before {
+    //   //content: "";
+    //   position: absolute;
+    //   display: block;
+    //   width: 0;
+    //   height: 0;
+    //   right: -37.5px;
+    //   bottom: 1px;
+    //   $size: 49px;
+    //   border-top: $size solid transparent;
+    //   border-left: 37.5px solid red;
+    //   border-bottom: $size solid transparent;
+    //   z-index: 3;
+    //   background: #3e3c41;
+    // }
 
     // &::before {
     //   content: "";
