--- a/src/components/molecules/StatusSteps/style.scss
+++ b/src/components/molecules/StatusSteps/style.scss
@@ -53,7 +53,7 @@
       width: 37px;
       height: 97px;
       right: -37px;
-      background-image: url("../../../img/Vector.svg");
+      background-image: url("./img/arrow.svg");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
