--- a/src/components/organisms/RideSettingsWidget/style.scss
+++ b/src/components/organisms/RideSettingsWidget/style.scss
@@ -15,3 +15,33 @@
 .end-line {
   border: 1px solid #e5e5e5;
 }
+.RideSettingsWidget__Price {
+}
+.Price {
+  .Price__row {
+    padding-left: 29px;
+    padding-right: 37px;
+    padding-top: 37px;
+  }
+  .Price__title {
+    font-family: Roboto;
+    font-size: 30px;
+    line-height: 35px;
+    color: #ffffff;
+    margin-bottom: 7px;
+  }
+
+  .Price__text {
+    display: flex;
+    justify-content: space-between;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #ffffff;
+    margin-bottom: 4px;
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+}
