--- a/src/components/atom/IconBtn/style.scss
+++ b/src/components/atom/IconBtn/style.scss
@@ -38,7 +38,7 @@
         background-color: #fcdc9d;
       }
     }
-    &:active {
+    &.active {
       border-color: #c4c4c4;
       &::before {
         display: none;
@@ -80,7 +80,7 @@
   &:hover {
     border: none;
   }
-  &:active {
+  &.active {
     border: 2px solid #928f94;
     &::before {
       display: none;
