--- a/src/components/organisms/RideSettingsWidget/style.scss
+++ b/src/components/organisms/RideSettingsWidget/style.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 43px;
+  padding-bottom: 15px;
 
   //   .container {
   //     padding-left: 29px;
