--- a/src/components/pages/TrainSelect/style.scss
+++ b/src/components/pages/TrainSelect/style.scss
@@ -30,3 +30,8 @@
   margin-top: 47px;
   margin-bottom: 142px;
 }
+.TrainSelect-main__Pagination {
+  margin-bottom: 190px;
+  display: flex;
+  justify-content: end;
+}
