--- a/src/components/organisms/LastTicketList/style.scss
+++ b/src/components/organisms/LastTicketList/style.scss
@@ -1,10 +1,10 @@
-.LastTicketWidget {
+.LastTicketList {
   max-width: 360px;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-.LastTicketWidget__Title {
+.LastTicketList__Title {
   font-family: Roboto;
   font-weight: 500;
   font-size: 30px;
@@ -15,7 +15,7 @@
   margin-bottom: 36px;
   padding-left: 4px;
 }
-.LastTicketWidget__row {
+.LastTicketList__row {
   display: flex;
   flex-direction: column;
 }
