--- a/src/components/pages/TrainSelect/style.scss
+++ b/src/components/pages/TrainSelect/style.scss
@@ -33,5 +33,5 @@
 .TrainSelect-main__Pagination {
   margin-bottom: 190px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
