--- a/src/components/molecules/Scheme/style.scss
+++ b/src/components/molecules/Scheme/style.scss
@@ -173,8 +173,25 @@
     height: 18px;
     margin-bottom: 4px;
     font-size: 13px;
+    order: 1;
     &:last-child {
       margin-bottom: 0;
     }
   }
+}
+.designations__wagon-number {
+  position: absolute;
+  width: 33px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333333;
+  color: white;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 14px;
+  left: 40px;
 }
