--- a/src/components/atom/Button/style.scss
+++ b/src/components/atom/Button/style.scss
@@ -1,4 +1,22 @@
 .btn {
+  &.typeEmpty {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: #292929;
+    height: 52px;
+    border: 1px solid #292929;
+    border-radius: 5px;
+    padding-left: 24px;
+    padding-right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+  }
   &.learnMore {
     width: 325px;
     height: 60px;
