--- a/src/components/molecules/PassengerCard/style.scss
+++ b/src/components/molecules/PassengerCard/style.scss
@@ -50,11 +50,26 @@
 
     color: #292929;
 
-    width: 281px;
+    width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
     color: black;
+    &.name {
+      max-width: 281px;
+    }
+    &.passport {
+      padding-left: 16px;
+      padding-right: 16px;
+      max-width: 205px;
+      letter-spacing: 5px;
+    }
+    &.birthCertificate {
+      padding-left: 16px;
+      padding-right: 16px;
+      max-width: 281px;
+      letter-spacing: 1px;
+    }
   }
   .input-date {
     background: #ffffff;
@@ -107,11 +122,13 @@
 }
 .PassengerCard-form {
   background: #ffffff;
-  border-bottom: 1px dashed #928f94;
-  padding: 36px;
+  border: 1px solid #c4c4c4;
+  padding-top: 38px;
+  padding-left: 36px;
+  padding-right: 31px;
+  padding-bottom: 28px;
 }
-.PassengerCard-form__age {
-  width: 280px;
+.PassengerCard-form__select {
   height: 50px;
   font-family: Roboto;
   font-style: normal;
@@ -129,8 +146,21 @@
 
   //box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   margin-bottom: 45px;
+  &.age {
+    width: 280px;
+  }
+
+  &.passport {
+    width: 205px;
+  }
+  &.birthCertificate {
+    width: 444px;
+  }
 }
-.PassengerCard-form__age-dropdown {
+.PassengerCard-form__select-dropdown {
+  &.type {
+    min-width: 444px !important;
+  }
   .ant-select-item {
     font-family: Roboto;
     font-style: normal;
