--- a/src/components/atom/Slider/style.scss
+++ b/src/components/atom/Slider/style.scss
@@ -34,7 +34,7 @@
   }
   .ant-slider-step {
     // position: relative;
-    width: calc(100%-22px);
+    width: calc(100% - 22px);
     height: 20px;
     border-radius: 8px;
     display: none;
