--- a/src/components/molecules/Scheme/style.scss
+++ b/src/components/molecules/Scheme/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .Scheme {
   padding-left: 21px;
   padding-right: 17px;
@@ -96,7 +97,7 @@
   color: black;
   cursor: pointer;
   &:hover {
-    border: 2px solid #ffa800;
+    border: 2px solid $primary;
   }
   //background-color: #e5e5e5;
   &.top {
