--- a/src/components/atom/DatePicker/antStyle.scss
+++ b/src/components/atom/DatePicker/antStyle.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .ant-picker {
   padding: 0;
 }
@@ -112,7 +113,7 @@
   //   width: 36px;
   //   height: 32px;
   //   background: rgba(255, 168, 0, 0.31);
-  //   border: 2px solid #ffa800;
+  //   border: 2px solid $primary;
   //   box-sizing: border-box;
   //   border-radius: 5px;
 }
@@ -133,7 +134,7 @@
   left: 0;
   z-index: 1;
 
-  border: 2px solid #ffa800;
+  border: 2px solid $primary;
   border-radius: 5px;
   content: "";
 }
@@ -160,7 +161,7 @@
     left: 0;
     z-index: 1;
     height: 32px;
-    border: 2px solid #ffa800;
+    border: 2px solid $primary;
     border-radius: 5px;
     content: "";
     transform: none;
