--- a/src/components/atom/IconBtn/style.scss
+++ b/src/components/atom/IconBtn/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .IconBtn {
   &.square {
     width: 20px;
@@ -51,7 +52,7 @@
   &.circular {
     width: 32px;
     height: 32px;
-    border: 2px solid #ffa800;
+    border: 2px solid $primary;
     background-color: inherit;
     border-radius: 100%;
     display: flex;
@@ -63,7 +64,7 @@
       display: block;
       width: 12.79px;
       height: 2px;
-      background-color: #ffa800;
+      background-color: $primary;
       border-radius: 2px;
       transform: rotate(-90deg);
     }
@@ -73,7 +74,7 @@
       display: block;
       width: 12.79px;
       height: 2px;
-      background-color: #ffa800;
+      background-color: $primary;
       border-radius: 2px;
     }
   }
