--- a/src/components/atom/WagonTypeInfo/style.scss
+++ b/src/components/atom/WagonTypeInfo/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .Wagon-Type-Info {
   display: flex;
   justify-content: space-between;
@@ -19,7 +20,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  color: #ffa800;
+  color: $primary;
   margin-right: 15px;
 }
 .Train-options-price {
@@ -81,7 +82,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-    color: #ffa800;
+    color: $primary;
     margin-right: 23px;
   }
   .Train-options-price {
