--- a/src/components/molecules/LastTicket/style.scss
+++ b/src/components/molecules/LastTicket/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .LastTicket {
   width: 360px;
   height: 161px;
@@ -67,7 +68,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 42px;
-    color: #ffa800;
+    color: $primary;
     position: relative;
     padding-right: 24px;
     padding-bottom: 2px;
