--- a/src/components/molecules/OptionsWidget/style.scss
+++ b/src/components/molecules/OptionsWidget/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .OptionsWidget {
 }
 .OptionsWidget__row {
@@ -53,7 +54,7 @@
     &.ant-switch-checked {
       background: #fcdc9d;
       .ant-switch-handle::before {
-        background: #ffa800;
+        background: $primary;
       }
     }
   }
