--- a/src/components/molecules/WidgetTimeSelect/style.scss
+++ b/src/components/molecules/WidgetTimeSelect/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .ThereWidget {
   //   display: flex;
 
@@ -16,7 +17,7 @@
 .ThereWidget-mini__icon {
   width: 32px;
   height: 26px;
-  background: #ffa800;
+  background: $primary;
   border-radius: 5px;
   display: flex;
   justify-content: center;
