--- a/src/components/organisms/ChairSelect/style.scss
+++ b/src/components/organisms/ChairSelect/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .ChairSelect {
 }
 .ChairSelect__title {
@@ -30,7 +31,7 @@
 .ChairSelect-top__icon {
   width: 76px;
   height: 60px;
-  background: #ffa800;
+  background: $primary;
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -81,7 +82,7 @@
   margin-left: 35px;
   width: 30px;
   height: 30px;
-  border: 2px solid #ffa800;
+  border: 2px solid $primary;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -90,7 +91,7 @@
   margin-right: 27px;
   &.icon-trainIcon {
     font-size: 30px;
-    color: #ffa800;
+    color: $primary;
     //filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
 }
@@ -303,7 +304,7 @@
     color: #928f94;
     cursor: pointer;
     &:hover {
-      color: #ffa800;
+      color: $primary;
     }
   }
   .sedentart {
