--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .header {
   position: relative;
   height: 985px;
@@ -12,7 +13,7 @@
   width: 100%;
   height: 8px;
   bottom: 0;
-  background: #ffa800;
+  background: $primary;
 }
 .header__logo {
   padding-left: 28px;
