--- a/src/components/molecules/OptionsWidget/style.scss
+++ b/src/components/molecules/OptionsWidget/style.scss
@@ -29,7 +29,7 @@
   }
   .item-text {
     margin-left: 34px;
-    font-family: Roboto;
+    font-family: $font;
     font-size: 18px;
     line-height: 21px;
     color: #ffffff;
