--- a/src/components/atom/DatePicker/antStyle.scss
+++ b/src/components/atom/DatePicker/antStyle.scss
@@ -20,7 +20,7 @@
   height: 100%;
 }
 .ant-picker-input > input {
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -61,7 +61,7 @@
 }
 .ant-picker-header {
   width: 100%;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 22px;
@@ -104,7 +104,7 @@
 
 .ant-picker-date-panel .ant-picker-content {
   width: 100%;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
