--- a/src/components/atom/Slider/style.scss
+++ b/src/components/atom/Slider/style.scss
@@ -60,7 +60,7 @@
     // margin-right: 6%;
   }
   .ant-slider-mark-text {
-    font-family: Roboto;
+    font-family: $font;
     font-size: 16px;
     line-height: 19px;
     text-align: right;
@@ -98,7 +98,7 @@
   margin-top: -15px;
   background-color: inherit;
   box-shadow: none;
-  font-family: Roboto;
+  font-family: $font;
   font-size: 16px;
   line-height: 19px;
 }
