--- a/src/components/molecules/DateWidget/style.scss
+++ b/src/components/molecules/DateWidget/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .DateWidget {
   width: 100%;
   padding-left: 29px;
@@ -5,7 +6,7 @@
   position: relative;
 }
 .DateWidget_title {
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
