--- a/src/components/molecules/Pagination/style.scss
+++ b/src/components/molecules/Pagination/style.scss
@@ -11,7 +11,7 @@
   border: 2px solid #c4c4c4;
   box-sizing: border-box;
   border-radius: 5px;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
