--- a/src/components/molecules/Scheme/style.scss
+++ b/src/components/molecules/Scheme/style.scss
@@ -8,7 +8,7 @@
   margin-left: auto;
   margin-right: 25px;
   margin-top: 4px;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -88,7 +88,7 @@
   justify-content: center;
   align-items: center;
   order: 2;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -189,7 +189,7 @@
   align-items: center;
   background-color: #333333;
   color: white;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
