--- a/src/components/molecules/SearchTicket/style.scss
+++ b/src/components/molecules/SearchTicket/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .search-ticket {
   display: flex;
 }
@@ -37,7 +38,7 @@
 .search-ticket-form__title {
   margin-bottom: 20px;
   width: 100%;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: 300;
   font-size: 30px;
@@ -52,7 +53,7 @@
   height: 60px;
   background: #ffffff;
   border-radius: 3px;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
