--- a/src/components/molecules/Service/style.scss
+++ b/src/components/molecules/Service/style.scss
@@ -1,6 +1,7 @@
+@import "../../../scss/config.scss";
 .Service {
   .owerlay-Service {
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -15,7 +16,7 @@
     border-radius: 5px;
     color: #292929;
     .ant-tooltip-inner {
-      font-family: Roboto;
+      font-family: $font;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -26,7 +27,7 @@
   }
 }
 .Service__title {
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
