--- a/src/components/molecules/Wagon/style.scss
+++ b/src/components/molecules/Wagon/style.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/config.scss";
 .Wagon {
 }
 .Wagon__top {
@@ -10,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
 
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -25,7 +26,7 @@
   span {
     position: relative;
     top: 3px;
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -52,7 +53,7 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 30px 37px;
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: bold;
   font-size: 72px;
@@ -60,7 +61,7 @@
 
   color: #292929;
   span {
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -84,7 +85,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -96,7 +97,7 @@
     }
   }
   .table__top {
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -114,7 +115,7 @@
       }
     }
     .table__item-price {
-      font-family: Roboto;
+      font-family: $font;
       font-style: normal;
       font-weight: normal;
       font-size: 18px;
@@ -125,7 +126,7 @@
   .table__item-text {
     span {
       margin-left: 10px;
-      font-family: Roboto;
+      font-family: $font;
       font-style: normal;
       font-weight: bold;
       font-size: 24px;
@@ -134,7 +135,7 @@
     }
   }
   .table__item-price {
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
