--- a/src/components/molecules/WidgetTimeSelect/style.scss
+++ b/src/components/molecules/WidgetTimeSelect/style.scss
@@ -28,7 +28,7 @@
   color: inherit;
 }
 .ThereWidget-mini__text {
-  font-family: Roboto;
+  font-family: $font;
   font-weight: bold;
   font-size: 30px;
   line-height: 35px;
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   .title {
-    font-family: Roboto;
+    font-family: $font;
     font-size: 24px;
     line-height: 28px;
     color: #e5e5e5;
