--- a/src/components/organisms/Footer/style.scss
+++ b/src/components/organisms/Footer/style.scss
@@ -1,8 +1,9 @@
+@import "../../../scss/config.scss";
 .footer {
   height: 519px;
   background: #2d2b2f;
 
-  font-family: Roboto;
+  font-family: $font;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
@@ -10,7 +11,7 @@
 
   color: #e5e5e5;
   .title {
-    font-family: Roboto;
+    font-family: $font;
     font-style: normal;
     font-weight: 500;
     font-size: 30px;
@@ -86,7 +87,7 @@
   box-sizing: border-box;
   border-radius: 3px;
   background: #2d2b2f;
-  font-family: Roboto;
+  font-family: $font;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
