--- a/src/components/atom/ItemTimetablele/style.scss
+++ b/src/components/atom/ItemTimetablele/style.scss
@@ -19,10 +19,12 @@
   font-size: 18px;
   line-height: 22px;
   margin-bottom: 12px;
+  text-transform: capitalize;
 }
 .timetable__railway-station {
   font-family: Calibri;
   font-size: 16px;
   line-height: 20px;
   color: #928f94;
+  text-transform: capitalize;
 }
