--- a/src/components/molecules/RouresTop/style.scss
+++ b/src/components/molecules/RouresTop/style.scss
@@ -1,4 +1,4 @@
-.TrainSelect-top {
+.Roures-top {
   font-family: Calibri;
   font-style: normal;
   font-weight: normal;
@@ -9,9 +9,9 @@
   display: flex;
   align-items: center;
 }
-.TrainSelect-top__found {
+.Roures-top__found {
 }
-.TrainSelect-top__sort-by {
+.Roures-top__sort-by {
 }
 .sort-by {
   flex: 1 1 auto;
@@ -56,7 +56,7 @@
   }
 }
 
-.TrainSelect-top__show-by {
+.Roures-top__show-by {
 }
 .show-by {
   display: flex;
