--- a/src/components/atom/WagonTypeInfo/style.scss
+++ b/src/components/atom/WagonTypeInfo/style.scss
@@ -22,6 +22,7 @@
   line-height: 20px;
   color: $primary;
   margin-right: 15px;
+  padding-bottom: 2px;
 }
 .Train-options-price {
   font-family: Calibri;
