--- a/src/components/atom/ItemTimetablele/style.scss
+++ b/src/components/atom/ItemTimetablele/style.scss
@@ -4,7 +4,8 @@
   font-style: normal;
   font-weight: normal;
   color: #000000;
-  max-width: 155px;
+  max-width: 135px;
+  width: 100%;
   margin-bottom: 0px;
 }
 .timetable__time {
