--- a/src/components/molecules/RoutesItem/style.scss
+++ b/src/components/molecules/RoutesItem/style.scss
@@ -81,7 +81,8 @@
 }
 .timetable__row {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  width: 100%;
   margin-bottom: 61px;
 }
 
