--- a/src/components/atom/AdditionalServices/style.scss
+++ b/src/components/atom/AdditionalServices/style.scss
@@ -16,8 +16,17 @@
   }
 }
 .icon-wiFi {
+  &.active {
+    color: #ffa800;
+  }
 }
 .icon-express {
+  &.active {
+    color: #ffa800;
+  }
 }
 .icon-coffee {
+  &.active {
+    color: #ffa800;
+  }
 }
