--- a/src/components/molecules/RoutesItem/style.scss
+++ b/src/components/molecules/RoutesItem/style.scss
@@ -140,6 +140,7 @@
   justify-content: flex-end;
   margin-bottom: 18px;
   margin-right: 8px;
+  margin-top: 7px;
 }
 .Train-options__button {
   align-self: flex-end;
