--- a/src/components/molecules/SearchTicket/style.scss
+++ b/src/components/molecules/SearchTicket/style.scss
@@ -1,8 +1,8 @@
 @import "../../../scss/config.scss";
-.search-ticket {
+.SearchTicket {
   display: flex;
 }
-.search-ticket__title {
+.SearchTicket__title {
   font-family: Calibri;
   font-style: normal;
   font-weight: normal;
@@ -16,10 +16,10 @@
   margin-right: 184px;
   margin-bottom: 110px;
 }
-.search-ticket__form {
+.SearchTicket__form {
   width: 50%;
 }
-.search-ticket-form {
+.SearchTicket-form {
   width: 729px;
   height: 574px;
   background: rgba(41, 41, 41, 0.8);
@@ -35,7 +35,7 @@
     flex-wrap: wrap;
   }
 }
-.search-ticket-form__title {
+.SearchTicket-form__title {
   margin-bottom: 20px;
   width: 100%;
   font-family: $font;
@@ -47,8 +47,10 @@
   margin-top: 56px;
   margin-left: 4px;
 }
-
-.search-ticket-form__item {
+.SearchTicket-searchCity {
+}
+.SearchTicket-form__item {
+  position: relative;
   width: 322px;
   height: 60px;
   background: #ffffff;
@@ -59,25 +61,24 @@
   font-size: 18px;
   line-height: 21px;
   /* identical to box height */
-  color: #e5e5e5;
-  padding: 20px;
+  color: black;
 }
-.search-ticket-form__icon {
+.SearchTicket-form__icon {
   width: 24px;
   height: 24px;
-  background-image: url("./img/icon/search-ticket-form__update.png");
+  background-image: url("./img/icon/SearchTicket-form__update.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
 }
 
-.search-ticket-form__button {
+.SearchTicket-form__button {
   margin-top: 77px;
   align-self: end;
 }
 
 .selectTrain {
-  .search-ticket-form {
+  .SearchTicket-form {
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
@@ -94,13 +95,13 @@
       }
     }
   }
-  .search-ticket-form__title {
+  .SearchTicket-form__title {
     margin-top: 0px;
   }
-  .search-ticket__title {
+  .SearchTicket__title {
     display: none;
   }
-  .search-ticket-form__button {
+  .SearchTicket-form__button {
     margin-top: 0px;
     align-self: flex-end;
   }
