--- a/src/components/atom/SearchCity/style.scss
+++ b/src/components/atom/SearchCity/style.scss
@@ -29,7 +29,9 @@
     padding: 14px 0px;
     top: 68px;
     left: 0px;
-    z-index: 3;
+    z-index: 10;
+    max-height: 170px;
+    overflow: scroll;
   }
   .item-City {
     font-size: 18px;
